filing/css/styles.css
/* ... */
.arrow a {
	text-decoration: none;
	font-size: 24px;
}

.arrow a:hover {
	opacity: 0.4;
}

h1 {
	font-weight: 700;
	font-size: 160px;
	line-height: 160px;
	padding: 20px 0 20px 0;
	margin: 0;
}
.work h1 {
	font-size: 140px;
}

h2 {
	font-weight: 300;
	font-size: 40px;
	line-height: 50px;
	padding: 0 0 10px 0;
	margin: 0;
}

h3 {
	font-weight: bold;
	font-size: 42px;
	line-height: 52px;
	padding: 20px 0 20px 0;
	margin: 0;
}

h4,
h5 {
	font-weight: bold;
	font-size: 10px;
	line-height: 18px;
	padding: 20px 0 0 0;
	margin: 0;
	text-transform: uppercase;
}

h4 {
	opacity: 0.2;
}

section {
	max-width: 620px;
}

section ul,
footer ul {
	list-style: none;
	padding: 0;
	margin: 0 0 20px 0;
}

.images {
	max-width: 1680px;
	padding: 25vh 0 140px 0;
}

.row {
	display: flex;
}

.column-100 {
	flex: 100%;
	padding-right: 15px;
	padding-bottom: 45px;
}
.home .column-100,
.team .column-100 {
	padding-bottom: 0px;
}

.column-60 {
	flex: 60%;
	max-width: 1040px;
	padding-right: 15px;
}

.column-40 {
	flex: 40%;
	max-width: 615px;
	padding-right: 15px;
}

p.employable {
	font-weight: 300;
	font-size: 18px;
	line-height: 26px;
	padding: 20px 0 20px 0;
	max-width: 1280px;
}

p.caption {
	padding: 5px 0 0 0;
	line-height: 1.4;
}

.column-100 p.caption {
	padding-bottom: 20px;
}

.home .column-100 p.caption,
.team .column-100 p.caption {
	padding-bottom: 0px;
}
.home p.caption {
	padding-top: 10px;
}

p.intro {
	font-size: 28px;
	line-height: 36px;
	padding-bottom: 10px;
}

blockquote {
	border-left: 1px solid rgb(221, 221, 221, 0.2);
	padding: 0 20px 0 20px;
	margin: 0;
}

hr {
	margin: 40px 0 20px 0;
	border-top: 1px solid #1a1a1a;
}

hr.large {
	margin: 50px 0 30px 0;
	border-top: 1px solid #1a1a1a;
	opacity: 0.8;
}

.opacity {
	opacity: 0.4;
}

.hover {
	text-decoration: none;
}

.uppercase {
	text-transform: uppercase;
}

.quote {
	padding-top: 8px;
	display: inline-block;
}

.desktop {
	display: none;
}

.archived {
	max-width: 620px;
}

.archived table {
	padding-top: 80px;
	padding-bottom: 40px;
}

footer {
	padding: 60px 0 0 0;
}

/* ==|== media queries ======================================================
   EXAMPLE Media Query for Responsive Design.
   This example overrides the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */

@media only screen and (max-width: 1680px) {
	.home .container {
		background-image: url("/filing/images/wellington-map-small.jpg");
	}
	header {
		padding-top: 40vh;
	}
	.home header {
		padding-bottom: 40px;
	}
	.work header {
		padding-top: 55vh;
	}
	.images {
		max-width: 1540px;
	}
	.column-60 {
		flex: 65%;
	}
	.column-40 {
		flex: 35%;
	}
}
@media only screen and (max-width: 1460px) {
	header {
		padding-top: 30vh;
	}
	.work h1 {
		font-size: 100px;
		line-height: 110px;
	}
}

@media only screen and (max-width: 900px) {
	.home .container {
		background-image: none;
	}
	.container {
		padding: 20px 20px;
	}
	.anchor {
		display: none;
	}
	.URL {
		margin-right: 25%;
	}
	header {
		padding-top: 35vh;
	}
	.work header {
		padding-top: 50vh;
	}
	h1 {
		font-size: 70px;
		line-height: 74px;
	}
	.work header h1 {
		font-size: 38px;
		line-height: 48px;
		padding-bottom: 0px;
	}
	h2,
	h3 {
		font-size: 20px;
		line-height: 28px;
		padding: 10px 0 10px 0;
		max-width: 615px;
	}
	.column-100 p.caption {
		padding-bottom: 0px;
	}
	p.employable {
		font-size: 14px;
		line-height: 22px;
	}
	p.intro {
		font-size: 18px;
		line-height: 24px;
	}
	.images {
		padding: 140px 0 70px 0;
	}
	.row {
		display: block;
		max-width: 615px;
	}
	.column-100 {
		flex: 100%;
		padding: 0;
	}
	.column-60 {
		flex: 100%;
		padding: 0;
	}
	.column-40 {
		flex: 100%;
		padding: 0;
	}
	.hide {
		display: none;
	}
	.desktop {
		display: inline;
	}
	table {
		padding-top: 80px;
	}
	td {
		padding-right: 40px;
	}
	hr.large {
		margin: 30px 0 30px 0;
	}
}

@media only screen and (max-width: 320px) {
	h1 {
		font-size: 56px;
		line-height: 66px;
	}
	h2 {
		font-size: 18px;
		line-height: 24px;
	}
}

/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir {
	display: block;
	border: 0;
	text-indent: -999em;
	overflow: hidden;
	background-color: transparent;
	background-repeat: no-repeat;
	text-align: left;
	direction: ltr;
	*line-height: 0;
}
.ir br {
	display: none;
}

/* Hide from both screenreaders and browsers */
.hidden {
	display: none !important;
	visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	width: auto;
}

/* Hide visually and from screenreaders, but maintain layout */
.invisible {
	visibility: hidden;
}

/* Contain floats: h5bp.com/q */
.clearfix:before,
.clearfix:after {
	content: "";
	display: table;
}
.clearfix:after {
	clear: both;
}
.clearfix {
	*zoom: 1;
}
/* ... */

